--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-        go-version: 1.16.x
+        go-version: 1.19.x
     - name: Lint
       run: make -k lint
 
-  test-coverage:
+  test:
     name: Test with Go ${{ matrix.go }}
     runs-on: ubuntu-latest
     permissions:
@@ -26,36 +26,25 @@ jobs:
       matrix:
         go:
           - 1.16.x
-    steps:
-    - uses: actions/checkout@v3
-    - name: checkout
-      run: |
-        commits=${{ github.event.pull_request.commits }}
-        if [[ -n "$commits" ]]; then
-          # Prepare enough depth for diffs with master
-          git fetch --depth="$(( commits + 1 ))"
-        fi
-    - uses: actions/setup-go@v3
-      with:
-        go-version: ${{ matrix.go }}
-    - name: Test
-      run: make test
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  test:
-    name: Test with Go ${{ matrix.go }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go:
           - 1.17.x
-          - ^1.18  # Latest version of Go
+          - 1.18.x
+          - 1.19.x
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go }}
         check-latest: true
+    - name: checkout-more
+      run: |
+        # If running coverage report tools, fetch more commits for coverage diff.
+        commits=${{ github.event.pull_request.commits }}
+        if [[ -n "$commits" && "$(go version)" == *"go${COVERAGE_VERSION}"* ]]; then
+          # Prepare enough depth for diffs with master
+          git fetch --depth="$(( commits + 1 ))"
+        fi
     - name: Test
       run: make test
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COVERAGE_VERSION: 1.19
