Revert publish change

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,9 @@ jobs:
         go-version: ${{ matrix.go }}
         check-latest: true
     - name: Test
-      run: make -k test test-publish-coverage
+      run: make -k test
       env:
         LINT_GO_VERSION: 1.19
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Publish test coverage
       if: "matrix.platform == 'ubuntu-latest' && matrix.go == '1.19.x'"
       run: |
